@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-16T16:29:52Z",
-  "count_outdated" : 132,
-  "uniques_outdated" : 28,
-  "count" : 151,
+  "timestamp" : "2022-09-17T02:08:35Z",
+  "count_outdated" : 135,
+  "uniques_outdated" : 29,
+  "count" : 154,
   "uniques" : 40,
   "clones" : [
-    {
-      "timestamp": "2022-09-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-07T00:00:00Z",
       "count": 1,
@@ -77,8 +70,8 @@
     },
     {
       "timestamp": "2022-09-16T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
