@@ -3,11 +3,6 @@
   "uniques": 2,
   "clones": [
     {
-      "timestamp": "2022-09-02T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-09-07T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -54,7 +49,7 @@
     },
     {
       "timestamp": "2022-09-16T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 1
     }
   ]
