@@ -1,3 +1,11 @@
+2022-09-17T02:08:35Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3071759739
+* notice: last 14d: unq all: 2 19
+* notice: prev accum: outdated-unq outdated-all / unq all: 28 132 / 40 151
+* notice: next accum: outdated-unq outdated-all / unq all: 29 135 / 40 154
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [2022-09-02] / [2022-09-16]
+
 2022-09-16T16:29:52Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3069316490
 * notice: last 14d: unq all: 2 19
